polish: Demon Slayer (#2355)
* test: opt into sidebar test

* refactor: modernize

* polish: highlight "Climb up" on staircase

* polish: ensure player is properly guided to drain

* nit: add keys instead of silverlight to last step

From https://github.com/Zoinkwiz/quest-helper/pull/2364

Co-authored-by: jespernapp <jesperooo@live.se>

---------

Co-authored-by: jespernapp <jesperooo@live.se>